--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@
 }
 
 .codeInput {
-    @apply border-b border-solid border-black w-64 text-center shadow-sm focus:outline-none focus:border-lime-600 transition ease-in-out duration-200
+    @apply border-b border-solid border-black w-64 text-center shadow-sm focus:outline-none focus:border-booking transition ease-in-out duration-200
 }
 
 .borderbottom {
